@@ -7,6 +7,7 @@ PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.
 * Bug fixes *
 
 - #5677, Retain SRID during unary union (Paul Ramsey)
+- #5833, pg_upgrade fix for postgis_sfcgal (Regina Obe)
 
 
 PostGIS 3.5.1
